# shadowsocks-rust

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  android-cross-build.sh  build-android-rust.sh  build_lib_ios.sh  build_libss_swift.sh  cross-build-win-ios.sh  log4rs.yaml  rust-cross-build.sh
crates/shadowsocks/: Cargo.toml
crates/shadowsocks-service/: Cargo.toml
crates/shadowsocks-service/src/: config.rs  database_monitor.rs  lib.rs  mysql_db.rs  tokio_mysql_db.rs  url_generator.rs
crates/shadowsocks-service/src/local/: mod.rs  utils.rs
crates/shadowsocks-service/src/local/net/tcp/: auto_proxy_stream.rs
crates/shadowsocks-service/src/local/online_config/: mod.rs
crates/shadowsocks-service/src/local/socks/client/socks5/: udp_client.rs
crates/shadowsocks-service/src/local/tun/: fake_tun.rs  mod.rs  tcp.rs  udp.rs
crates/shadowsocks-service/src/manager/: mod.rs  server.rs
crates/shadowsocks-service/src/net/: mon_socket.rs
crates/shadowsocks-service/src/server/: context.rs  mod.rs  server.rs  tcprelay.rs  udprelay.rs
crates/shadowsocks-vpn/: Cargo.toml  shadowsocks_vpn.h
crates/shadowsocks-vpn/src/: lib.rs  macos_tun_device.rs  main.rs  main2.rs  mobile_device_manager.rs  mobile_singleton.rs  mobile_tun_device.rs  old_main.rs  windows_tun_device.rs
crates/shadowsocks/src/: config.rs  context.rs
crates/shadowsocks/src/dns_resolver/: hickory_dns_resolver.rs
crates/shadowsocks/src/manager/: datagram.rs  domain_command.rs  listener.rs  mod.rs  protocol.rs
crates/shadowsocks/src/net/: option.rs  udp.rs
crates/shadowsocks/src/relay/tcprelay/: aead_2022.rs  crypto_io.rs  mod.rs  proxy_listener.rs
crates/shadowsocks/src/relay/tcprelay/proxy_stream/: client.rs  server.rs
crates/shadowsocks/src/relay/udprelay/: aead_2022.rs  crypto_io.rs  proxy_socket.rs
crates/shadowsocks/tests/: tcp.rs  tcp_tfo.rs  udp.rs
crates/ss_swift/: Cargo.toml
crates/ss_swift/src/: lib.rs  something.rs
docker/android/aarch64-linux-android/: Dockerfile
docker/linux-cross/: Dockerfile  Dockerfile copy
examples/rustls/: Cargo.toml
examples/rustls/src/: main.rs
src/: lib.rs
src/service/: domain_connection.rs  key_generator.rs  local.rs  manager.rs  mod.rs  server.rs  url_generator.rs  web_service.rs
src/vparser/: mod.rs
stuff/: README.md  build-android-rust.sh  client_android.json  client_config.json  client_config2.json  client_config3.json  client_config_local.json  log4rs.yaml  manager_config_local.json  rust-cross-build.sh  server_config.json  ssmanager.service.txt
