[package]
name = "ss_swift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]
name = "ss_swift"

[dependencies]
uniffi = "0.28"


[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }