# cargo build --target aarch64-apple-ios-sim --package ss_swift
[package]
name = "ss_swift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]
name = "ss_swift"

[dependencies]
uniffi = "0.28"
lazy_static = "1.5.0"
tokio = { features = ["time","rt","rt-multi-thread"], version = "1.43.0" }


[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }